[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/square.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Schluber.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[node name="Options" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ]
}

[node name="Overlay" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.490196 )
position = Vector2( 286, 510 )
scale = Vector2( 12.0833, 21.4167 )
texture = ExtResource( 1 )

[node name="OptionsOverlay" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.835294 )
position = Vector2( 302, 494 )
scale = Vector2( 8.08333, 16.0833 )
texture = ExtResource( 1 )

[node name="OptionLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="OptionLayer"]
margin_left = 172.0
margin_top = 208.0
margin_right = 416.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "options"

[node name="OptionsController" type="Control" parent="OptionLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Volume" type="Label" parent="OptionLayer/OptionsController"]
margin_left = 144.0
margin_top = 352.0
margin_right = 302.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 3 )
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="OptionLayer/OptionsController"]
margin_left = 288.0
margin_top = 336.0
margin_right = 432.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 80, 32 )
min_value = 1.0
value = 1.0

[node name="Difficulty" type="Label" parent="OptionLayer/OptionsController"]
margin_left = 144.0
margin_top = 464.0
margin_right = 302.0
margin_bottom = 523.0
custom_fonts/font = SubResource( 3 )
text = "Difficulty"

[node name="DifficultySlider" type="HSlider" parent="OptionLayer/OptionsController"]
margin_left = 320.0
margin_top = 448.0
margin_right = 432.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 80, 32 )
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Button" type="Button" parent="OptionLayer"]
margin_left = 256.0
margin_top = 768.0
margin_right = 356.0
margin_bottom = 819.0
custom_fonts/font = SubResource( 3 )
text = "close"

[connection signal="value_changed" from="OptionLayer/OptionsController/DifficultySlider" to="." method="_on_DifficultySlider_value_changed"]
[connection signal="pressed" from="OptionLayer/Button" to="." method="_on_Button_pressed"]
